# GentSim

./: .gitignore  README.md  main.py  plot.py  pyproject.toml  requirements.txt  server.py  vis.ipynb
data/: agent_data.csv  income_data.csv
scripts/: create_plots.py  income_distribution.py  model_vis.py  parallel_run.py  plot_gent.py  plot_mu.py  run_parameter_set.py  run_sweep.py  sensitivity_analysis.py
src/: csv_converter.py  data_analysis.py  household.py  income_distribution.py  model.py  neighbourhood.py  simulation_runner.py  vis.ipynb
